--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,10 @@ spring.datasource.password=1234
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:FREE
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.generate_statistics=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.properties.hibernate.allow_enhancement_as_proxy =true
 spring.jpa.properties.hibernate.ejb.use_class_enhancer=true
+spring.jpa.properties.hibernate.bytecode.use_reflection_optimizer=false
 spring.main.allow-bean-definition-overriding=true
