--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,13 @@ spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.generate_statistics=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-spring.jpa.properties.hibernate.allow_enhancement_as_proxy =true
+spring.jpa.properties.hibernate.bytecode.allow_enhancement_as_proxy =true
 spring.jpa.properties.hibernate.ejb.use_class_enhancer=true
-spring.jpa.properties.hibernate.bytecode.use_reflection_optimizer=false
+spring.jpa.properties.hibernate.bytecode.use_reflection_optimizer=true
+
+spring.jpa.properties.hibernate.enhancer.enableDirtyTracking=true
+spring.jpa.properties.hibernate.enhancer.enableLazyInitialization=true
+spring.jpa.properties.hibernate.enhancer.failOnError=true
+spring.jpa.properties.hibernate.enhancer.enableAssociationManagement=true
+spring.jpa.properties.hibernate.enhancer.enableExtendedEnhancement=true
 spring.main.allow-bean-definition-overriding=true
